--- a/excercise3.ipynb
+++ b/excercise3.ipynb
@@ -65,8 +65,50 @@
     "\tif not hits:\n",
     "\t\treturn pd.DataFrame()\n",
     "\tdf = pd.DataFrame(hits)\n",
-    "\treturn df\n",
-    "\n"
+    "\treturn df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11e1cdc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfdd1d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fold_tree.src.corecut import *\n",
+    "from fold_tree.src.foldseek2tree import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66faf219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#let's take a look at some of the results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d5dcee",
+   "metadata": {},
+   "source": [
+    "Now it's your turn! In the previous sections, we explored how to:\n",
+    "\n",
+    "- Examine pairs of protein structures using rigid alignment\n",
+    "- Label and annotate different structural regions\n",
+    "- Build and visualize both sequence-based and structure-based phylogenetic trees\n",
+    "\n",
+    "Each code cell in this notebook is designed to be self-contained, allowing you to run the analyses step by step. Feel free to experiment with your own data and explore the evolutionary and structural relationships of your proteins of interest."
    ]
   },
   {
