working on excercise 2

--- a/excercise3.ipynb
+++ b/excercise3.ipynb
@@ -65,13 +65,57 @@
     "\tif not hits:\n",
     "\t\treturn pd.DataFrame()\n",
     "\tdf = pd.DataFrame(hits)\n",
-    "\treturn df"
+    "\treturn df\n",
+    "\n",
+    "#let's query the Foldseek API with our structure\n",
+    "df = query_foldseek_api(path_to_your_structure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d79180d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11e1cdc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can download the alphafold structures for the hits as well as the uniprot metadata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfa86f6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#at this point we should inspect the dataset a bit to see what we have"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919427c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can check the taxonomic distribution of the hits\n",
+    "maxlevel = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6303c39f",
    "metadata": {},
    "outputs": [],
    "source": []
